<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.andresvanegas.punto_2.MainActivity"
    android:background="@color/colorPrimary">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/num1"
        android:id="@+id/enum1"
        android:textSize="30sp"
        android:inputType="number"
        android:textColor="#000000"
        android:textStyle="bold" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/num2"
        android:id="@+id/enum2"
        android:textSize="30sp"
        android:inputType="number"
        android:layout_below="@+id/enum1"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc"
        android:layout_gravity="end"
        android:textSize="30sp"
        android:id="@+id/bcalc"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/Resp"
        android:id="@+id/tResp"
        android:layout_below="@+id/enum2"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bcalc"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp"
        android:id="@+id/radioGroup"
        android:background="#00ffffff"
        android:backgroundTint="@android:color/white">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/sum"
            android:id="@+id/radio1"
            android:layout_gravity="center_horizontal"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/Rest"
            android:id="@+id/radio2"
            android:layout_gravity="center_horizontal"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/Mult"
            android:id="@+id/radio3"
            android:layout_gravity="center_horizontal"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/Div"
            android:id="@+id/radio4"
            android:layout_gravity="center_horizontal"
            android:checked="false" />
    </RadioGroup>


</RelativeLayout>
